# backend-training

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  shell.nix
backend_training/flask_tutorial/: hello.py
backend_training/flask_tutorial/templates/: hello.html
