[project]
name="backend_training"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    "Flask",
    "watchdog"
]

#[project.scripts]
#preprocess = "mtg_bot.cli.preprocess:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend_training*"]
namespaces = false
